Fixed the error of Trail Mix not showing

--- a/05_Candy/css/style.css
+++ b/05_Candy/css/style.css
@@ -12,7 +12,7 @@ p {
 }
 #sections > div{
 	opacity: .3;
-  margin-bottom: 600px;
+    margin-bottom: 900px;
 }
 h1{
   margin: 20px;
@@ -34,7 +34,7 @@ h1{
   width: 500px;
   margin-left: 380px;
   position: absolute;
-  top: 0px;
+  top: 10px;
 }
 
 .graph-scroll-fixed #graph{
